[package]
name = "sms_splitter"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Aitthi <meanstack20@gmail.com>"]
description = "An SMS message splitter and part calculator with support for GSM and Unicode"
categories = ["sms", "gsm", "unicode"]
keywords = ["SMS", "GSM", "Unicode", "splitter", "split-sms"]
repository = "https://github.com/Aitthi/sms-splitter"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# dev dependencies
[dev-dependencies]
serde_json = "1.0.86"